# bswitcher

./: index.html  package.json  tailwind.config.cjs  tsconfig.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  main.rs  types.rs
